# Genre-Classification

./: .gitignore  Pipfile  README.md  data.dvc  environment.yaml  pyproject.toml  requirements.txt  testing_requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  environment.yaml
.dvc/: config
.github/workflows/: tests.yaml  tests_docker.txt
notebooks/: deploy.ipynb  eda.ipynb  lightning.ipynb  lstm.ipynb  model.pth  test.ipynb
notebooks/runs/Oct28_10-08-22_Rara/: events.out.tfevents.1698484102.Rara.5440.0
notebooks/runs/Oct28_10-14-08_Rara/: events.out.tfevents.1698484448.Rara.5440.1
notebooks/runs/Oct28_10-18-36_Rara/: events.out.tfevents.1698484716.Rara.5440.2
notebooks/runs/Oct28_10-21-02_Rara/: events.out.tfevents.1698484862.Rara.5440.3
notebooks/runs/Oct28_10-36-50_Rara/: events.out.tfevents.1698485810.Rara.5440.4
notebooks/runs/Oct28_10-37-16_Rara/: events.out.tfevents.1698485836.Rara.5440.5
notebooks/runs/Oct28_17-02-31_Rara/: events.out.tfevents.1698508951.Rara.5608.0
notebooks/runs/Oct30_17-49-05_Rara/: events.out.tfevents.1698688145.Rara.10040.0
scripts/: export_conda_env.py
src/: config.py  main.py  model.py  preprocessing.py  test_load_data.py  train.py  train_tuning.py
src/config/: config.yaml  config_best.yaml
src/genre_classifier/: model.py  preprocessing.py
src/tests/: test_load_data.py  test_mfcc_dataset.py  test_prepare_datasets.py  test_save_mfcc.py
